--- a/src/homeStyle.css
+++ b/src/homeStyle.css
@@ -12,7 +12,10 @@
     padding-bottom: 5rem;
 }
 
-.services h1{
+.services .head{
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: bold;
     margin: 12px;
     padding: 12px;
     color: white;
@@ -122,6 +125,14 @@
         }
     }
     
+}
+.projects .head-2{
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: bold;
+    margin: 12px;
+    padding: 12px;
+    color: rgb(0, 0, 0);
 }
 .wrap{
     display: flex;
